# agent-team

./: .gitignore  .pre-commit-hooks.yaml  DECOUPLING.md  LICENSE  README.md  pyproject.toml  sandboxed_tools.py  team_profile.py
.github/workflows/: ci.yml  nightly-sagent-head.yml
agent-pack/: README.md  setup.sh
agent-pack/.claude/agents/: junior-swe.md  statistician.md  swe.md  tech-writer.md  tl.md
agent_team/: __init__.py  merge_jsonl.py  sandboxed_tools.py  serve.py  team_profile.py
agent_team/cli_session/: __init__.py  format_spec.md  materializer.py  materializer_test.py  parser.py  parser_test.py  tripwire.py  tripwire_test.py
agent_team/mcp_sagent/: __init__.py  config_factory.py  delivery.py  server.py
agent_team/profiles/default/: team.toml
agent_team/profiles/default/roles/: junior-swe.md  tl.md
agent_team/roles/: __init__.py  common.py  junior_swe.py  statistician.py  swe.py  tech_writer.py  tl.py
agent_team/runtime/: trace_writer.py
agent_team/web/: debug.html  index.html
agent_team/worklog/: __init__.py
agent_team/worklog/tools/: _frontmatter.py  _lintrc.py  build_index.py  lint_worklog.py  normalize_tags.py
ai_dev_team/: __init__.py  merge_jsonl.py  serve.py  team_profile.py
ai_dev_team/mcp_sagent/: config_factory.py  delivery.py  server.py
ai_dev_team/profiles/default/: team.toml
ai_dev_team/profiles/default/roles/: tech-writer.md
ai_dev_team/roles/: __init__.py  common.py  statistician.py  tl.py
ai_dev_team/runtime/: trace_writer.py
ai_dev_team/web/: debug.html  index.html
checklists/: AGENT_CHECKLIST.md  PRIVATE_ADDENDUM_NOTES.md  STATISTICIAN_BAYESIAN_WORKFLOW.md  STATISTICIAN_DIAGNOSTICS_RECIPE.md
examples/: README.md
examples/sample-app/: README.md  model.py
examples/sample-app/profile/: team.toml
examples/sample-app/profile/roles/: statistician.md
mcp_sagent/: config_factory.py  delivery.py  server.py
profiles/default/roles/: swe.md
roles/: common.py  junior-swe.md  junior_swe.py  statistician.md  statistician.py  swe.md  swe.py  tech-writer.md  tech_writer.py  tl.md  tl.py
runtime/: trace_writer.py
tests/: build_agent_kwargs_test.py  conftest.py  delivery_test.py  materialize_test.py  sandboxed_tools_test.py  tl_anchored_slim_test.py  trace_writer_test.py  worklog_test.py
web/: debug.html  index.html
worklog/: README.md  TAGS.template.md  pre-commit.template.yaml
