[project]
name = "agent-team"
version = "0.1.0"
description = "A configurable, Bayesian-aware multi-agent dev team on sagent + the Claude CLI. Default profile: building/debugging apps that use BlackJAX."
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    # sagent: pinned to a KNOWN-GOOD rev via a DIRECT URL (not [tool.uv.sources],
    # so the pin still TRAVELS with a from-git install — `uvx --from
    # git+…/agent-team` resolves this same rev, no `--with` override needed). We
    # pin a rev rather than @main because sagent's provider API is mid-rework:
    # main's AnthropicCLI.model() has DROPPED extra_mcp_servers / session_id /
    # subprocess_read_timeout_sec (which roles/common.py passes), so @main breaks
    # the channel boot. This rev (06603e2 = the PR #177 merge) is the last one
    # whose model() API agent-team targets. Revisit when sagent stabilizes /
    # ships >=0.1.7 (then a plain "sagent>=0.1.7"); nightly-sagent-head.yml warns
    # when main drifts further.
    "sagent @ git+https://github.com/rekursiv-ai/sagent.git@06603e217ad9c445fe3d23c8d5346aa893b734b8",
    "starlette",
    "uvicorn",
    "mcp",
]

[project.scripts]
agent-team = "agent_team.serve:main"
agent-team-merge = "agent_team.merge_jsonl:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_team*"]

# Ship the non-.py data that the package needs to work out of the box: the
# web UI HTML (resolved via importlib.resources in serve.py) and the bundled
# default profile (team.toml + role prompts, resolved in team_profile.py).
# setuptools only ships declared package-data for non-.py files.
[tool.setuptools.package-data]
agent_team = [
    "web/*.html",
    "profiles/**/*.toml",
    "profiles/**/*.md",
]
