[project]
name = "agent-team"
version = "0.1.0"
description = "A configurable, Bayesian-aware multi-agent dev team on sagent + the Claude CLI. Default profile: building/debugging apps that use BlackJAX."
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Apache-2.0" }
dependencies = [
    # sagent: pinned to a specific KNOWN-GOOD main commit via a DIRECT URL (not
    # [tool.uv.sources], so the pin TRAVELS with a from-git install — `uvx --from
    # git+…/agent-team` resolves this same commit, no `--with` override). We pin a
    # commit (not @main) for reproducibility: sagent is machine-exported (copybara),
    # and a *transient* export bug once dropped extra_mcp_servers / session_id /
    # subprocess_read_timeout_sec from AnthropicCLI.model() (which roles/common.py
    # passes) — fixed upstream (#197 / PR #198 closed), but the export can hiccup.
    # This rev (e67b89a) is a current main commit with the full provider API.
    # nightly-sagent-head.yml watches @main + the signature smoke catches a re-drop.
    # Switch to a plain "sagent>=0.1.7" once sagent ships a PyPI release.
    "sagent @ git+https://github.com/rekursiv-ai/sagent.git@e67b89a33c852bb82d3fe13518e40003c843700f",
    "starlette",
    "uvicorn",
    "mcp",
]

[project.scripts]
agent-team = "agent_team.serve:main"
agent-team-merge = "agent_team.merge_jsonl:main"

[dependency-groups]
# Test deps for the vendored cli_session/ materializer suite (async canary
# tests need pytest-asyncio). Run: `uv run --group dev pytest agent_team/`.
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_team*"]

# Ship the non-.py data that the package needs to work out of the box: the
# web UI HTML (resolved via importlib.resources in serve.py) and the bundled
# default profile (team.toml + role prompts, resolved in team_profile.py).
# setuptools only ships declared package-data for non-.py files.
[tool.setuptools.package-data]
agent_team = [
    "web/*.html",
    "profiles/**/*.toml",
    "profiles/**/*.md",
    "cli_session/*.md",
]
