[project]
name = "agent-team"
version = "0.1.0"
description = "A configurable, Bayesian-aware multi-agent dev team on sagent + the Claude CLI. Default profile: building/debugging apps that use BlackJAX."
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Apache-2.0" }
dependencies = [
    "sagent>=0.1.8",
    "starlette",
    "uvicorn",
    "mcp",
]

[project.scripts]
agent-team = "agent_team.serve:main"
agent-team-merge = "agent_team.merge_jsonl:main"

[dependency-groups]
# Test deps for the vendored cli_session/ materializer suite (async canary
# tests need pytest-asyncio). Run: `uv run --group dev pytest agent_team/`.
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_team*"]

# Ship the non-.py data that the package needs to work out of the box: the
# web UI HTML (resolved via importlib.resources in serve.py) and the bundled
# default profile (team.toml + role prompts, resolved in team_profile.py).
# setuptools only ships declared package-data for non-.py files.
[tool.setuptools.package-data]
agent_team = [
    "web/*.html",
    "profiles/**/*.toml",
    "profiles/**/*.md",
    "cli_session/*.md",
]
